--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
+  <title>Broadway</title>
   </head>
   <body>
+      <h1> Broadway Design<br />
+        <footer>Home<br/>Process<br />Work<br />Team<br />Contact</footer></h1>
+
+        <h2>Process</h2>
+        <img src ="resources/images/identify.svg">
+        <h3>Identify</h3>
+          <p>We focus on the most important details</p>
+        <img src ="resources/images/understand.svg">
+        <h3>Understand</h3>
+          <p>We study our projects inside out.</p>
+        <img src="resources/images/execute.svg">
+        <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+
+
 
 
 
