--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         <h3>Execute</h3>
           <p>We put everything we have into our work.</p>
 
+        <h4>Designed in New York</h4>
+        <h3>Portfolio</h3>
+          <p>Coming soon</p>
+        <h3>Team</h3>
+          <p>We're hiring!</p>
+        <h3>Contact</h3>
+          <p>Phone: (555)-555-5555<br />Email: test@example.com<br />Twitter: @test</p>
 
-
-
-
-
-
+          <h5>© Broadway 2016 <u>Home</u><u>About</u><u>Work</u><u>Team</u><u>Contact</u></h5>
 
   </body>
   </html>
